# bincookie

./: .clang-format  .cmake-format.yaml  .cz.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  .yarnrc.yml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Doxyfile  Doxyfile.in  LICENSE.txt  Makefile  README.md  SECURITY.md  binarycookies.ksy  bincookie.c  bincookie.h  package.json  test.c  update-gh-pages.sh  vcpkg.json
.claude/: settings.json
.claude/agents/: copy-editor.md  qa-fixer.md  regen.md  release.md  wiswa-sync.md
.claude/rules/: general.md
.claude/skills/ci/: SKILL.md
.claude/skills/make-release/: SKILL.md
.github/: dependabot.yml  zizmor.yml
.github/instructions/: general.instructions.md
.github/workflows/: clang-format.yml  codeql.yml  markdownlint.yml  pages.yml  prettier.yml  qa.yml  release.yml  spelling.yml  tests.yml
examples/: CMakeLists.txt  convert2netscape.c
libbinarycookies.xcodeproj/: project.pbxproj
libbinarycookies.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libbinarycookies.xcodeproj/project.xcworkspace/xcuserdata/tatsh.xcuserdatad/: UserInterfaceState.xcuserstate
libbinarycookies.xcodeproj/xcuserdata/tatsh.xcuserdatad/xcschemes/: libbinarycookies.xcscheme  xcschememanagement.plist
libbinarycookies/libbinarycookies.xcodeproj/: project.pbxproj
libbinarycookies/libbinarycookies.xcodeproj/project.xcworkspace/xcuserdata/tatsh.xcuserdatad/: UserInterfaceState.xcuserstate
man/: bincookie.h.3
original/: BinaryCookieReader.py
test/: main.c
